add bg_img and h1

--- a/index.html
+++ b/index.html
@@ -47,10 +47,89 @@
               </li>
             </ul>
           </nav>
+
           <!-- phone ------------------------------------------->
           <a class="phone" href="tel:514-111-2222">
             <img class="phone" src="images/phone.svg" alt="" />
           </a>
+        </div>
+      </div>
+      <!-------------------------header__content ----------------->
+      <div class="header__content">
+        <div class="container">
+          <h1 class="title">Seafood from Norway</h1>
+
+          <!------------------------------------ slider -->
+          <div class="header-slider">
+            <div class="header-slider__item">
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reiciendis, eos dolore. Doloribus ab consequuntur corrupti
+                voluptas dolores natus velit dolorem.
+              </p>
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                obcaecati perferendis eligendi quas mollitia.
+              </p>
+            </div>
+
+            <div class="header-slider__item">
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reiciendis, eos dolore. Doloribus ab consequuntur corrupti
+                voluptas dolores natus velit dolorem.
+              </p>
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                obcaecati perferendis eligendi quas mollitia.
+              </p>
+            </div>
+
+            <div class="header-slider__item">
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reiciendis, eos dolore. Doloribus ab consequuntur corrupti
+                voluptas dolores natus velit dolorem.
+              </p>
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                obcaecati perferendis eligendi quas mollitia.
+              </p>
+            </div>
+
+            <div class="header-slider__item">
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reiciendis, eos dolore. Doloribus ab consequuntur corrupti
+                voluptas dolores natus velit dolorem.
+              </p>
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                obcaecati perferendis eligendi quas mollitia.
+              </p>
+            </div>
+
+            <div class="header-slider__item">
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reiciendis, eos dolore. Doloribus ab consequuntur corrupti
+                voluptas dolores natus velit dolorem.
+              </p>
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                obcaecati perferendis eligendi quas mollitia.
+              </p>
+            </div>
+          </div>
+
+          <!------------------------------------------- Button -->
+          <a href="#" class="header__content-btn">Select</a>
+
+          <!------------------------------------ change lang---------->
+          <div class="header__content-box">
+            <a href="#" class="header__content-link">EN</a>/
+            <a href="#" class="header__content-link">FR</a>
+          </div>
         </div>
       </div>
     </header>
