first step of slider

--- a/index.html
+++ b/index.html
@@ -65,11 +65,26 @@
               <p class="header-slider__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Reiciendis, eos dolore. Doloribus ab consequuntur corrupti
-                voluptas dolores natus velit dolorem.
+                voluptas dolores natus velit dolorem. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Reiciendis, eos dolore. Doloribus
+                ab consequuntur corrupti voluptas dolores natus velit dolorem.
               </p>
               <p class="header-slider__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
                 obcaecati perferendis eligendi quas mollitia.
+              </p>
+            </div>
+
+            <div class="header-slider__item">
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reiciendis, eos dolore. Doloribus ab consequuntur corrupti
+                voluptas dolores natus velit dolorem.
+              </p>
+              <p class="header-slider__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                obcaecati perferendis eligendi quas mollitia.Doloribus ab
+                consequuntur corrupti voluptas dolores natus velit dolorem.
               </p>
             </div>
 
@@ -88,20 +103,7 @@
             <div class="header-slider__item">
               <p class="header-slider__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Reiciendis, eos dolore. Doloribus ab consequuntur corrupti
-                voluptas dolores natus velit dolorem.
-              </p>
-              <p class="header-slider__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-                obcaecati perferendis eligendi quas mollitia.
-              </p>
-            </div>
-
-            <div class="header-slider__item">
-              <p class="header-slider__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Reiciendis, eos dolore. Doloribus ab consequuntur corrupti
-                voluptas dolores natus velit dolorem.
+                Reiciendis, eos dolore.
               </p>
               <p class="header-slider__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
