Button and lang_btn

--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
 
           <!------------------------------------ change lang---------->
           <div class="header__content-box">
-            <a href="#" class="header__content-link">EN</a>/
+            <a
+              href="#"
+              class="header__content-link header__content-link--active"
+              >EN</a
+            >/
             <a href="#" class="header__content-link">FR</a>
           </div>
         </div>
