--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@
       </div>
     </header>
 
+    <main class="main">
+      <section class="product">
+        <div class="container">
+          <div class="product__inner">
+            
+          </div>
+        </div>
+      </section>
+    </main>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
