start of midl section

--- a/index.html
+++ b/index.html
@@ -139,12 +139,64 @@
         </div>
       </div>
     </header>
+    <!---------------------------------------------------- header-end -->
 
     <main class="main">
       <section class="product">
         <div class="container">
           <div class="product__inner">
-            
+            <div class="product__name">
+              <h3 class="product__name-item">Cod</h3>
+              <h3 class="product__name-item">Salmon</h3>
+              <h3 class="product__name-item">Mackerel</h3>
+              <h3 class="product__name-item">Blue mussel</h3>
+              <h3 class="product__name-item">Brown crab</h3>
+              <h3 class="product__name-item">Octopus</h3>
+              <h3 class="product__name-item">Trout</h3>
+              <h3 class="product__name-item">Perch</h3>
+            </div>
+            <!------------------------ Image and description --------------------------------->
+            <div class="product__content">
+              <!-- Item_1-start --------------------------------------------------------------->
+              <div class="product__content-element">
+                <div class="product__content-box">
+                  <img
+                    class="product__content-img"
+                    src="./images/fish_img/cod.png"
+                    alt="fish_cod"
+                  />
+                  <ul class="product__content-list">
+                    <li class="product__content-item">
+                      <span>Season</span>
+                      <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Catch range</span>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Nutrient</span>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </li>
+                  </ul>
+                </div>
+                <!-- ******************************** -->
+                <h3 class="product__content-title">Cod</h3>
+                <p class="product__content-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  alias similique culpa repellat eius id voluptatum maiores
+                  impedit molestiae ducimus. Earum, quaerat? Pariatur earum iure
+                  quisquam reiciendis blanditiis eos, ea non quam officiis omnis
+                  a beatae. Quisquam accusamus odit dolor quibusdam delectus in
+                  accusantium praesentium maxime ex exercitationem architecto
+                  illum officia, nisi perferendis beatae distinctio a. Ut
+                  explicabo eaque, doloribus aut illum dolorem aperiam?
+                </p>
+
+                <button class="product__content-btn">Order</button>
+              </div>
+              <!---- Item_1-end ----------------------------------------->
+            </div>
           </div>
         </div>
       </section>
@@ -156,3 +208,5 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+
+<div class="product__content-description"></div>
