midle section slide_lists

--- a/index.html
+++ b/index.html
@@ -196,6 +196,280 @@
                 <button class="product__content-btn">Order</button>
               </div>
               <!---- Item_1-end ----------------------------------------->
+
+              <!-- Item_2-start --------------------------------------------------------------->
+              <div class="product__content-element">
+                <div class="product__content-box">
+                  <img
+                    class="product__content-img"
+                    src="./images/fish_img/salmon.png"
+                    alt="fish_cod"
+                  />
+                  <ul class="product__content-list">
+                    <li class="product__content-item">
+                      <span>Season</span>
+                      <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Catch range</span>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Nutrient</span>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </li>
+                  </ul>
+                </div>
+                <!-- ******************************** -->
+                <h3 class="product__content-title">Salmon</h3>
+                <p class="product__content-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  alias similique culpa repellat eius id voluptatum maiores
+                  impedit molestiae ducimus. Earum, quaerat? Pariatur earum iure
+                  quisquam reiciendis blanditiis eos, ea non quam officiis omnis
+                  a beatae. Quisquam accusamus odit dolor quibusdam delectus in
+                  accusantium praesentium maxime ex exercitationem architecto
+                  illum officia, nisi perferendis beatae distinctio a. Ut
+                  explicabo eaque, doloribus aut illum dolorem aperiam?
+                </p>
+
+                <button class="product__content-btn">Order</button>
+              </div>
+              <!---- Item_2-end ----------------------------------------->
+              <!-- Item_3-start --------------------------------------------------------------->
+              <div class="product__content-element">
+                <div class="product__content-box">
+                  <img
+                    class="product__content-img"
+                    src="./images/fish_img/mackerel.png"
+                    alt="fish_cod"
+                  />
+                  <ul class="product__content-list">
+                    <li class="product__content-item">
+                      <span>Season</span>
+                      <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Catch range</span>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Nutrient</span>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </li>
+                  </ul>
+                </div>
+                <!-- ******************************** -->
+                <h3 class="product__content-title">Mackerel</h3>
+                <p class="product__content-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  alias similique culpa repellat eius id voluptatum maiores
+                  impedit molestiae ducimus. Earum, quaerat? Pariatur earum iure
+                  quisquam reiciendis blanditiis eos, ea non quam officiis omnis
+                  a beatae. Quisquam accusamus odit dolor quibusdam delectus in
+                  accusantium praesentium maxime ex exercitationem architecto
+                  illum officia, nisi perferendis beatae distinctio a. Ut
+                  explicabo eaque, doloribus aut illum dolorem aperiam?
+                </p>
+
+                <button class="product__content-btn">Order</button>
+              </div>
+              <!---- Item_3-end ----------------------------------------->
+              <!-- Item_4-start --------------------------------------------------------------->
+              <div class="product__content-element">
+                <div class="product__content-box">
+                  <img
+                    class="product__content-img"
+                    src="./images/fish_img/blue mussel.png"
+                    alt="fish_cod"
+                  />
+                  <ul class="product__content-list">
+                    <li class="product__content-item">
+                      <span>Season</span>
+                      <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Catch range</span>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Nutrient</span>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </li>
+                  </ul>
+                </div>
+                <!-- ******************************** -->
+                <h3 class="product__content-title">Blue mussel</h3>
+                <p class="product__content-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  alias similique culpa repellat eius id voluptatum maiores
+                  impedit molestiae ducimus. Earum, quaerat? Pariatur earum iure
+                  quisquam reiciendis blanditiis eos, ea non quam officiis omnis
+                  a beatae. Quisquam accusamus odit dolor quibusdam delectus in
+                  accusantium praesentium maxime ex exercitationem architecto
+                  illum officia, nisi perferendis beatae distinctio a. Ut
+                  explicabo eaque, doloribus aut illum dolorem aperiam?
+                </p>
+
+                <button class="product__content-btn">Order</button>
+              </div>
+              <!---- Item_4-end ----------------------------------------->
+              <!-- Item_5-start --------------------------------------------------------------->
+              <div class="product__content-element">
+                <div class="product__content-box">
+                  <img
+                    class="product__content-img"
+                    src="./images/fish_img/brown crab.png"
+                    alt="fish_cod"
+                  />
+                  <ul class="product__content-list">
+                    <li class="product__content-item">
+                      <span>Season</span>
+                      <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Catch range</span>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Nutrient</span>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </li>
+                  </ul>
+                </div>
+                <!-- ******************************** -->
+                <h3 class="product__content-title">Brown crab</h3>
+                <p class="product__content-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  alias similique culpa repellat eius id voluptatum maiores
+                  impedit molestiae ducimus. Earum, quaerat? Pariatur earum iure
+                  quisquam reiciendis blanditiis eos, ea non quam officiis omnis
+                  a beatae. Quisquam accusamus odit dolor quibusdam delectus in
+                  accusantium praesentium maxime ex exercitationem architecto
+                  illum officia, nisi perferendis beatae distinctio a. Ut
+                  explicabo eaque, doloribus aut illum dolorem aperiam?
+                </p>
+
+                <button class="product__content-btn">Order</button>
+              </div>
+              <!---- Item_5-end ----------------------------------------->
+              <!-- Item_6-start --------------------------------------------------------------->
+              <div class="product__content-element">
+                <div class="product__content-box">
+                  <img
+                    class="product__content-img"
+                    src="./images/fish_img/octopus.png"
+                    alt="fish_cod"
+                  />
+                  <ul class="product__content-list">
+                    <li class="product__content-item">
+                      <span>Season</span>
+                      <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Catch range</span>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Nutrient</span>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </li>
+                  </ul>
+                </div>
+                <!-- ******************************** -->
+                <h3 class="product__content-title">Octopus</h3>
+                <p class="product__content-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  alias similique culpa repellat eius id voluptatum maiores
+                  impedit molestiae ducimus. Earum, quaerat? Pariatur earum iure
+                  quisquam reiciendis blanditiis eos, ea non quam officiis omnis
+                  a beatae. Quisquam accusamus odit dolor quibusdam delectus in
+                  accusantium praesentium maxime ex exercitationem architecto
+                  illum officia, nisi perferendis beatae distinctio a. Ut
+                  explicabo eaque, doloribus aut illum dolorem aperiam?
+                </p>
+
+                <button class="product__content-btn">Order</button>
+              </div>
+              <!---- Item_6-end ----------------------------------------->
+              <!-- Item_7-start --------------------------------------------------------------->
+              <div class="product__content-element">
+                <div class="product__content-box">
+                  <img
+                    class="product__content-img"
+                    src="./images/fish_img/trout.png"
+                    alt="fish_cod"
+                  />
+                  <ul class="product__content-list">
+                    <li class="product__content-item">
+                      <span>Season</span>
+                      <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Catch range</span>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Nutrient</span>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </li>
+                  </ul>
+                </div>
+                <!-- ******************************** -->
+                <h3 class="product__content-title">Trout</h3>
+                <p class="product__content-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  alias similique culpa repellat eius id voluptatum maiores
+                  impedit molestiae ducimus. Earum, quaerat? Pariatur earum iure
+                  quisquam reiciendis blanditiis eos, ea non quam officiis omnis
+                  a beatae. Quisquam accusamus odit dolor quibusdam delectus in
+                  accusantium praesentium maxime ex exercitationem architecto
+                  illum officia, nisi perferendis beatae distinctio a. Ut
+                  explicabo eaque, doloribus aut illum dolorem aperiam?
+                </p>
+
+                <button class="product__content-btn">Order</button>
+              </div>
+              <!---- Item_7-end ----------------------------------------->
+              <!-- Item_8-start --------------------------------------------------------------->
+              <div class="product__content-element">
+                <div class="product__content-box">
+                  <img
+                    class="product__content-img"
+                    src="./images/fish_img/perch.png"
+                    alt="fish_cod"
+                  />
+                  <ul class="product__content-list">
+                    <li class="product__content-item">
+                      <span>Season</span>
+                      <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Catch range</span>
+                      <p>Lorem ipsum dolor sit amet.</p>
+                    </li>
+                    <li class="product__content-item">
+                      <span>Nutrient</span>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </li>
+                  </ul>
+                </div>
+                <!-- ******************************** -->
+                <h3 class="product__content-title">Perch</h3>
+                <p class="product__content-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                  alias similique culpa repellat eius id voluptatum maiores
+                  impedit molestiae ducimus. Earum, quaerat? Pariatur earum iure
+                  quisquam reiciendis blanditiis eos, ea non quam officiis omnis
+                  a beatae. Quisquam accusamus odit dolor quibusdam delectus in
+                  accusantium praesentium maxime ex exercitationem architecto
+                  illum officia, nisi perferendis beatae distinctio a. Ut
+                  explicabo eaque, doloribus aut illum dolorem aperiam?
+                </p>
+
+                <button class="product__content-btn">Order</button>
+              </div>
+              <!---- Item_8-end ----------------------------------------->
             </div>
           </div>
         </div>
