End of  midle section slide_lists

--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
                   />
                   <ul class="product__content-list">
                     <li class="product__content-item">
-                      <span>Season</span>
+                      <span class="span-title">Season</span>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Catch range</span>
+                      <span class="span-title">Catch range</span>
                       <p>Lorem ipsum dolor sit amet.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Nutrient</span>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                      <span class="span-title">Nutrient</span>
+                      <p>protein, B12, calcium, phosphorus</p>
                     </li>
                   </ul>
                 </div>
@@ -207,16 +207,16 @@
                   />
                   <ul class="product__content-list">
                     <li class="product__content-item">
-                      <span>Season</span>
+                      <span class="span-title">Season</span>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Catch range</span>
+                      <span class="span-title">Catch range</span>
                       <p>Lorem ipsum dolor sit amet.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Nutrient</span>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                      <span class="span-title">Nutrient</span>
+                      <p>protein, B12, calcium, phosphorus</p>
                     </li>
                   </ul>
                 </div>
@@ -246,16 +246,16 @@
                   />
                   <ul class="product__content-list">
                     <li class="product__content-item">
-                      <span>Season</span>
+                      <span class="span-title">Season</span>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Catch range</span>
+                      <span class="span-title">Catch range</span>
                       <p>Lorem ipsum dolor sit amet.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Nutrient</span>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                      <span class="span-title">Nutrient</span>
+                      <p>protein, B12, calcium, phosphorus</p>
                     </li>
                   </ul>
                 </div>
@@ -285,16 +285,16 @@
                   />
                   <ul class="product__content-list">
                     <li class="product__content-item">
-                      <span>Season</span>
+                      <span class="span-title">Season</span>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Catch range</span>
+                      <span class="span-title">Catch range</span>
                       <p>Lorem ipsum dolor sit amet.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Nutrient</span>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                      <span class="span-title">Nutrient</span>
+                      <p>protein, B12, calcium, phosphorus</p>
                     </li>
                   </ul>
                 </div>
@@ -324,16 +324,16 @@
                   />
                   <ul class="product__content-list">
                     <li class="product__content-item">
-                      <span>Season</span>
+                      <span class="span-title">Season</span>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Catch range</span>
+                      <span class="span-title">Catch range</span>
                       <p>Lorem ipsum dolor sit amet.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Nutrient</span>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                      <span class="span-title">Nutrient</span>
+                      <p>protein, B12, calcium, phosphorus</p>
                     </li>
                   </ul>
                 </div>
@@ -363,16 +363,16 @@
                   />
                   <ul class="product__content-list">
                     <li class="product__content-item">
-                      <span>Season</span>
+                      <span class="span-title">Season</span>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Catch range</span>
+                      <span class="span-title">Catch range</span>
                       <p>Lorem ipsum dolor sit amet.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Nutrient</span>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                      <span class="span-title">Nutrient</span>
+                      <p>protein, B12, calcium, phosphorus</p>
                     </li>
                   </ul>
                 </div>
@@ -402,16 +402,16 @@
                   />
                   <ul class="product__content-list">
                     <li class="product__content-item">
-                      <span>Season</span>
+                      <span class="span-title">Season</span>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Catch range</span>
+                      <span class="span-title">Catch range</span>
                       <p>Lorem ipsum dolor sit amet.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Nutrient</span>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                      <span class="span-title">Nutrient</span>
+                      <p>protein, B12, calcium, phosphorus</p>
                     </li>
                   </ul>
                 </div>
@@ -441,16 +441,16 @@
                   />
                   <ul class="product__content-list">
                     <li class="product__content-item">
-                      <span>Season</span>
+                      <span class="span-title">Season</span>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Catch range</span>
+                      <span class="span-title">Catch range</span>
                       <p>Lorem ipsum dolor sit amet.</p>
                     </li>
                     <li class="product__content-item">
-                      <span>Nutrient</span>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                      <span class="span-title">Nutrient</span>
+                      <p>protein, B12, calcium, phosphorus</p>
                     </li>
                   </ul>
                 </div>
@@ -482,5 +482,3 @@
     <script src="js/main.js"></script>
   </body>
 </html>
-
-<div class="product__content-description"></div>
