--- a/index.html
+++ b/index.html
@@ -474,6 +474,16 @@
           </div>
         </div>
       </section>
+      <div class="seafood__container">
+        <div class="seafood">
+          <div class="seafood__items">
+            <div class="seafood__item">Unique diversity</div>
+            <div class="seafood__item">Ecological consumption</div>
+            <div class="seafood__item">The best quality</div>
+            <div class="seafood__item">Ideal growing conditions</div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
